# ext-zlib-ng-win

./: CMakeLists.txt  README.md
include/: zlib-ng.pc
lib/: zlib-ng.lib  zlib-ngd.lib
